--- a/index.html
+++ b/index.html
@@ -1,27 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
+<body class="">
+
+  <nav class="navbar  fixed-top navbar-expand-lg mt-5 ">
+    <div class="container-fluid">
+      <a class="navbar-brand mx-5 " href="#"><img src="assets/shared/logo.svg" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+
+          <ul class="navbar-nav  justify-content-around flex-grow-1 pe-3  py-5  nav_container">
+            <li class="nav-item ">
+              <a class="nav-link active text-light " aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link text-light" href="#">Destination</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link text-light" href="#">Crew</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link text-light" href="#">Technology</a>
+            </li>
+
+
+          </ul>
+
+        </div>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+  <!-- 00 Home
   01 Destination
   02 Crew
   03 Technology
 
   So, you want to travel to
   Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
+  Let’s face it; if you want to go to space, you might as well genuinely go to
+  outer space and not hover kind of on the edge of it. Well sit back, and relax
   because we’ll give you a truly out of this world experience!
 
-  Explore
+  Explore -->
 
+
+
+
+
+
+  <script src="script/bootstrap.js"></script>
+  <script src="script/script.js"></script>
 </body>
+
 </html>
